--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ body {
   }
   
   .work img {
-    width: 100%;
+    /* width: 100%; */
     border: 0 none;
     opacity: 0.8;
     height: 205.5px;
