--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,55 @@
+ /* header */
+  
+ #masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: darkgray;
+  background:white;
+  border-bottom: 2px solid #cccccc;
+}
+
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: 'Playfair Display', serif;
+  font-size: 29px;
+  line-height: 90px;
+  color: gray;
+  text-align: center;
+  text-decoration: none;
+  background: none;
+}
+
+nav {
+  float: right;
+  margin-top: 25px;
+}
+
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: gray;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
+}
+
+nav a:first-child {
+  border-left: 0 none;
+}
+
 body {
     font-family: 'Playfair Display', serif;
     font-size: 18px;
     line-height: 34px;
     color: #777777;
-    background: url('/assets/images/fabric-texture-with-gray-and-white-swirl-pattern.jpg') repeat 0 0;;
-    /* background-color: white; */
+    background: url('../images/fabric-texture-with-gray-and-white-swirl-pattern.jpg');
+    background-size: 100%, 100%; 
   }
   
   * {
@@ -51,50 +96,6 @@ body {
     font-size: 22px;
   }
   
-  /* header */
-  
-  #masthead {
-    position: fixed;
-    z-index: 99;
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;
-    color: darkgray;
-    background:white;
-    border-bottom: 2px solid #cccccc;
-  }
-  
-  #logo {
-    float: left;
-    width: 250px;
-    height: 90px;
-    font-family: 'Playfair Display', serif;
-    font-size: 29px;
-    line-height: 90px;
-    color: gray;
-    text-align: center;
-    text-decoration: none;
-    background: none;
-  }
-  
-  nav {
-    float: right;
-    margin-top: 25px;
-  }
-  
-  nav a {
-    display: inline-block;
-    padding-left: 15px;
-    margin-left: 15px;
-    line-height: 18px;
-    color: gray;
-    text-decoration: none;
-    border-left: 1px solid #efefef;
-  }
-  
-  nav a:first-child {
-    border-left: 0 none;
-  }
   
   /* footer */
   
@@ -186,15 +187,15 @@ body {
     margin-bottom: 10px;
   }
   
-  label,
+  /* label,
   input[type=text],
   input[type=email],
   textarea {
     display: block;
     width: 100%;
-  }
+  } */
   
-  input[type=text],
+  /* input[type=text],
   input[type=email],
   textarea {
     height: 35px;
@@ -202,16 +203,16 @@ body {
     font-size: 14px;
     border: 1px solid #dddddd;
   }
-  
-  textarea {
+   */
+  /* textarea {
     height: 200px;
   }
-  
-  input[type=submit] {
+   */
+  /* input[type=submit] {
     padding: 10px 30px;
     font-size: 18px;
     color: gray;
     cursor: pointer;
     background: white;
     border: 0 none;
-  }
+  } */
